Image height fix and line spacing

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -77,11 +77,11 @@ input[type="file"].custom-file-input::before {
     border-color: black;
 }
 
-.max-height-300, .max-height-300 img {
-    max-height: 300px
+.max-height-220, .max-height-220 img {
+    max-height: 220px
 }
 
-.max-height-300 img {
+.max-height-220 img {
     width: auto;
     display: block;
     margin-left: auto;
@@ -123,4 +123,8 @@ input[type="file"].custom-file-input::before {
 
 .clearfix {
     overflow: hidden
+}
+
+.lh_half {
+    line-height: .5em;
 }
